--- a/05_SensitivityBarriersInteraction-ONLY_DAYS_WITH_PLAN-.Rmd
+++ b/05_SensitivityBarriersInteraction-ONLY_DAYS_WITH_PLAN-.Rmd
@@ -35,6 +35,8 @@ library(see)
 library(beepr)
 library(DHARMa)
 library(digest)
+library(tidybayes)
+library(ggplot2)
 
 
 
@@ -98,7 +100,7 @@ warmup = 2000 # 2000
 
 ################################################################
 
-suffix = paste0('_final_with_plan_', as.character(iterations))
+suffix = paste0('_final_with_plan_and_barriers_INTERACTION', as.character(iterations))
 
 
 ```
@@ -131,7 +133,9 @@ model_rows_fixed <- c(
     'pushing_partner_cw', 
     'day', 
     'plan_selfPlan',
-    'plan_partnerPlan',
+    'plan_partnerPlan', # todo: do we need this??
+    'barriers_self_cw', 
+    'facilitators_self_cw', 
     'weartime_self_cw',
     
     # '-- BETWEEN PERSON MAIN EFFECTS',
@@ -141,7 +145,19 @@ model_rows_fixed <- c(
     'pressure_partner_cb',
     'pushing_self_cb',
     'pushing_partner_cb',
-    'weartime_self_cb'
+    'barriers_self_cb', 
+    'facilitators_self_cb', 
+    'weartime_self_cb',
+    
+    # Interactions
+    
+    'persuasion_self_cw:barriers_self_cw',
+    'barriers_self_cw:pressure_self_cw',
+    'barriers_self_cw:pushing_self_cw',
+    
+    'persuasion_self_cw:facilitators_self_cw',
+    'pressure_self_cw:facilitators_self_cw',
+    'pushing_self_cw:facilitators_self_cw'
   )
 
 
@@ -165,6 +181,18 @@ model_rows_random <- c(
   'sd(pressure_partner_cw)',
   'sd(pushing_self_cw)',
   'sd(pushing_partner_cw)',
+  
+  'sd(barriers_self_cw)', 
+  'sd(facilitators_self_cw)',
+  
+  'sd(persuasion_self_cw:barriers_self_cw)',
+  'sd(barriers_self_cw:pressure_self_cw)',
+  'sd(barriers_self_cw:pushing_self_cw)',
+  
+  'sd(persuasion_self_cw:facilitators_self_cw)',
+  'sd(pressure_self_cw:facilitators_self_cw)',
+  'sd(pushing_self_cw:facilitators_self_cw)',
+  
   # '-- CORRELATION STRUCTURE -- ', 
   'sigma'
 )
@@ -188,10 +216,13 @@ model_rownames_fixed <- c(
     "Daily individual's experienced pushing", 
     "Daily partner's experienced pushing", 
     "Day", 
-    "Own Actionplan",
-    'Partner Actionplan',
-    "Daily wear time",
+    "Own actionplan",
+    'Partner actionplan',
+    "Daily barriers",
+    "Daily facilitators",
+    "Daily weartime",
     
+
     # "-- BETWEEN PERSON MAIN EFFECTS",
     "Mean individual's experienced persuasion", 
     "Mean partner's experienced persuasion", 
@@ -199,7 +230,18 @@ model_rownames_fixed <- c(
     "Mean partner's experienced pressure", 
     "Mean individual's experienced pushing", 
     "Mean partner's experienced pushing", 
-    "Mean wear time"
+    'Mean barriers',
+    "Mean facilitators",
+    "Mean weartime",
+    
+    # Interactions
+    'persuasion_self_cw:barriers_self_cw',
+    'barriers_self_cw:pressure_self_cw',
+    'barriers_self_cw:pushing_self_cw',
+    
+    'persuasion_self_cw:facilitators_self_cw',
+    'pressure_self_cw:facilitators_self_cw',
+    'pushing_self_cw:facilitators_self_cw'
   )
 
 
@@ -223,6 +265,17 @@ model_rownames_random <- c(
   "sd(Daily partner's experienced pressure)", 
   "sd(Daily individual's experienced pushing)", 
   "sd(Daily partner's experienced pushing)", 
+  
+  'sd(barriers_self_cw)', 
+  'sd(facilitators_self_cw)',
+  
+  'sd(persuasion_self_cw:barriers_self_cw)',
+  'sd(barriers_self_cw:pressure_self_cw)',
+  'sd(barriers_self_cw:pushing_self_cw)',
+  
+  'sd(persuasion_self_cw:facilitators_self_cw)',
+  'sd(pressure_self_cw:facilitators_self_cw)',
+  'sd(pushing_self_cw:facilitators_self_cw)',
   # '-- CORRELATION STRUCTURE -- ', 
   'sigma'
 )
@@ -237,18 +290,20 @@ model_rownames_random_ordinal <- c(model_rownames_random,'disc')
 ```{r parameters_for_printing}
 
 rows_to_pack <- list(
-  "Within-Person Effects" = c(2,11),
-  "Between-Person Effects" = c(12,18),
-  "Random Effects" = c(19, 25), 
-  "Additional Parameters" = c(26,26)
+  "Within-Person Effects" = c(2,13),
+  "Between-Person Effects" = c(14,22),
+  "Interactions" = c(23, 28),
+  "Random Effects" = c(29, 43), 
+  "Additional Parameters" = c(44,44)
   )
 
 
 rows_to_pack_ordinal <- list(
-  "Within-Person Effects" = c(2+5,11+5),
-  "Between-Person Effects" = c(12+5,18+5),
-  "Random Effects" = c(19+5, 25+5), 
-  "Additional Parameters" = c(26+5,26+6)
+  "Within-Person Effects" = c(2+5,13+5),
+  "Between-Person Effects" = c(14+5,22+5),
+  "Interactions" = c(23+5, 28+5),
+  "Random Effects" = c(29+5, 43+5), 
+  "Additional Parameters" = c(44+5,44+6)
   )
 
 ```
@@ -272,37 +327,73 @@ hist(log(df_double$pa_sub+00000000001), breaks = 40)
 
 formula <- bf(
   pa_sub ~ 
-    persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw +
+    persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     pushing_self_cb + pushing_partner_cb +
     
-    plan_self + plan_partner +
-    day + 
+    #plan_self + plan_partner +
+    barriers_self_cb + 
+    facilitators_self_cb + 
+    day +  
     
     # Random effects
-    (1 + persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | dd | coupleID),
+    (1 + persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw | dd | coupleID),
   
-  hu = ~ persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw +
+  hu = ~ persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     pushing_self_cb + pushing_partner_cb +
     
-    plan_self + plan_partner +
+    #plan_self + plan_partner +
+    barriers_self_cb + 
+    facilitators_self_cb + 
     day + 
     
     # Random effects
-    (1 + persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | dd | coupleID)
+    (1 + persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw | dd | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
@@ -336,7 +427,7 @@ pa_sub <- my_brm(
   family = brms::hurdle_lognormal(), 
   #family = brms::hurdle_negbinomial(), 
   #family = brms::hurdle_poisson(),
-  #control = list(adapt_delta = 0.95, max_treedepth = 15),
+  control = list(adapt_delta = 0.90),
   iter = iterations,
   warmup = warmup,
   chains = 4,
@@ -472,6 +563,7 @@ plot(
 
 ```
 
+
 Hurdle part of the model on the left, non-zero part towards the right side of the table
 
 ```{r report_pa_sub_lognormald, fig.height=11, fig.width=12, dpi=600, results='asis', cache=TRUE, cache.extra=pa_sub_digest, warnings = FALSE}
@@ -511,43 +603,6 @@ print(conds_eff)
 **Note.** This graphic illustrates the relationship between social control and moderate to vigorous physical activity (MVPA) using a Bayesian Hurdle-Lognormal Multilevel Model. The predictor is centered within individuals to examine how deviations from their average social control relate to same-day MVPA. Shaded areas indicate credible intervals, thick lines show fixed effects, and thin lines represent random effects, highlighting variability across couples.
 The plots display the probability of being active, expected minutes of MVPA when active, and combined predicted MVPA. The bottom density plot visualizes the posterior distributions of slope estimates, transformed to represent multiplicative changes in odds ratios (hurdle component) or expected values. Medians and 95% credible intervals (2.5th and 97.5th percentiles) are shown. Effects are significant, when the 95% credible interval does not overlap 1.
 
-```{r eval=FALSE}
-
-x_label = c(
-    'Received Persuasion',
-    'Exerted Persuasion',
-    'Received Pressure',
-    'Exerted Pressure',
-    'Received Plan-Related Pushing',
-    'Exerted Plan-Related Pushing'
-  )
-
-home_dir <- getwd()
-output_dir <- file.path(home_dir, 'Output', 'Plots')
-
-for (i in 1:length(conds_eff)) {
-  effname <- names(conds_eff)[i]
-  eff_plot <- conds_eff[[i]]
-  x_label_i <- x_label[[i]]
-  
-  rmarkdown::render(
-    file.path(output_dir, 'BeautifulPlotWithNote.Rmd'), 
-    output_file = file.path(output_dir, paste0('Graphic_', effname, '.pdf')),
-    params = list(
-      home_dir = home_dir,
-      output_dir = output_dir,
-      p_i = eff_plot,
-      p_name = effname,
-      x_label = x_label_i
-      ),
-    envir = new.env(),
-    quiet = TRUE
-  )
-}
-
-print('done')
-
-```
 
 ### Comparing effect size of pressure and pushing
 
@@ -582,26 +637,43 @@ hist(df_double$pa_obj_log, breaks = 50)
 
 formula <- bf(
   pa_obj ~ 
-    persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw +
+    persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     pushing_self_cb + pushing_partner_cb +
     
-    plan_self + plan_partner +
+    #plan_self + plan_partner +
+    barriers_self_cb + 
+    facilitators_self_cb + 
     day + weartime_self_cw + weartime_self_cb +
     
     # Random effects
-    (persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID)
+    (1 + persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
 )
-
 
 
 prior1 <- c(
@@ -629,13 +701,14 @@ pa_obj_log <- my_brm(
   prior = prior1,
   data = df_double, 
   family = lognormal(),
-  #control = list(adapt_delta = 0.95),
-  iter = iterations,
-  warmup = warmup,
+  control = list(adapt_delta = 0.99),
+  iter = iterations + 200,
+  warmup = warmup + 200,
   chains = 4,
   cores = 4,
   seed = 7777,
   file = file.path("models_cache_brms", paste0("pa_obj_log_gaussian", suffix))
+  #, file_refit = 'always'
 )
 
 pa_obj_log_digest <- digest::digest(pa_obj_log)
@@ -719,21 +792,39 @@ hist(df_double$aff, breaks = 15)
 
 formula <- bf(
   aff ~ 
-    persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw +
+    persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     pushing_self_cb + pushing_partner_cb +
     
-    plan_self + plan_partner +
-    day +
+    #plan_self + plan_partner +
+    barriers_self_cb + 
+    facilitators_self_cb + 
+    day + 
     
     # Random effects
-    (persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID)
+    (1 + persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
@@ -764,13 +855,14 @@ mood_gauss <- my_brm(
   prior = prior1,
   data = df_double, 
   family = gaussian(),
-  #control = list(adapt_delta = 0.95, max_treedepth = 15),
+  control = list(adapt_delta = 0.95),
   iter = iterations,
   warmup = warmup,
   chains = 4,
   cores = 4,
   seed = 7777,
   file = file.path("models_cache_brms", paste0("mood_gauss", suffix))
+  #, file_refit = 'always'
 )
 
 mood_gauss_digest <- digest::digest(mood_gauss)
@@ -860,21 +952,39 @@ df_double$reactance_ordinal <- factor(df_double$reactance,
 
 formula <- bf(
   reactance_ordinal ~ 
-    persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw +
+    persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     pushing_self_cb + pushing_partner_cb +
     
-    plan_self + plan_partner +
-    day +
+    #plan_self + plan_partner +
+    barriers_self_cb + 
+    facilitators_self_cb + 
+    day + 
     
     # Random effects
-    (persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID)
+    (1 + persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
@@ -905,7 +1015,7 @@ reactance_ordinal <- my_brm(
   prior = prior1,
   data = df_double, 
   family = brms::cumulative(),
-  control = list(adapt_delta = 0.95),
+  #control = list(adapt_delta = 0.95),
   iter = iterations,
   warmup = warmup,
   chains = 4,
@@ -970,13 +1080,13 @@ plot(
 
 
 
-conditional_spaghetti(
-  reactance_ordinal, 
-  effects = c('persuasion_self_cw', 'pressure_self_cw')
-  , group_var = 'coupleID'
-  #, n_groups = 15
-  , plot_full_range = T
-)
+#conditional_spaghetti(
+#  reactance_ordinal, 
+#  effects = c('persuasion_self_cw', 'pressure_self_cw')
+#  , group_var = 'coupleID'
+#  #, n_groups = 15
+#  , plot_full_range = T
+#)
 
 
 ```
@@ -1003,21 +1113,39 @@ if (use_mi) {
 
 formula <- bf(
   is_reactance ~ 
-    persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw +
+    persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     pushing_self_cb + pushing_partner_cb +
     
-    plan_self + plan_partner +
-    day +
+    #plan_self + plan_partner +
+    barriers_self_cb + 
+    facilitators_self_cb + 
+    day + 
     
     # Random effects
-    (persuasion_self_cw + persuasion_partner_cw +
-    pressure_self_cw + pressure_partner_cw +
-    pushing_self_cw + pushing_partner_cw | coupleID)
+    (1 + persuasion_self_cw * barriers_self_cw + 
+    pressure_self_cw * barriers_self_cw + 
+    pushing_self_cw * barriers_self_cw + 
+    
+    persuasion_self_cw * facilitators_self_cw + 
+    pressure_self_cw * facilitators_self_cw + 
+    pushing_self_cw * facilitators_self_cw + 
+    
+    persuasion_partner_cw +
+    pressure_partner_cw +
+    pushing_partner_cw | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
@@ -1178,6 +1306,309 @@ summary_all_models
 
 ```
 
+Plot Interaction effect. 
+
+1. Probability of being active (crossing the hurdle)
+
+```{r}
+
+library(ggplot2)
+library(plotly)
+
+
+p <- conditional_effects(
+  pa_sub, 
+  dpar = 'hu',
+  effects = 'pushing_self_cw:barriers_self_cw',
+  re_formula = NA, 
+  method = 'posterior_linpred',
+  plot = FALSE
+)
+
+p2 <- p
+
+p2[[1]]$estimate__ <- 1 - p[[1]]$estimate__
+p2[[1]]$lower__ <- 1 - p[[1]]$upper__
+p2[[1]]$upper__ <- 1 - p[[1]]$lower__
+
+plots <- plot(p2, theme = theme_minimal(), plot = FALSE) 
+
+plots[[1]] + 
+  scale_color_manual(values = c("steelblue", "forestgreen", "coral")) +
+  scale_fill_manual(values = c("steelblue", "forestgreen", "coral"))
+
+```
+
+# Test slope of pushing at high levels of barriers
+
+```{r}
+
+
+library(tidybayes)
+library(dplyr)
+library(ggplot2)
+
+plot_slope_by_moderator <- function(
+  mod,            
+  df,             
+  moderator,      
+  predictor_par,  
+  interaction_par,
+  exponentiate = FALSE,   
+  n_points = 1000,
+  fill_colors = c("Significant" = "steelblue",
+                  "Non-significant" = "coral"),
+  line_colors = fill_colors,  # Reuse fill colors by default
+  vjust_val = -1.5
+) {
+  
+  # Generate a sequence of moderator values
+  moderator_seq <- seq(
+    from = min(df[[moderator]], na.rm = TRUE),
+    to = max(df[[moderator]], na.rm = TRUE),
+    length.out = n_points
+  )
+  
+  # Extract posterior draws for the parameters of interest
+  library(rlang)
+  predictor_sym <- rlang::sym(predictor_par)
+  interaction_sym <- rlang::sym(interaction_par)
+
+  post_draws <- mod %>%
+    spread_draws(!!predictor_sym, !!interaction_sym)
+  
+  # For each moderator value, compute the slope for each posterior draw
+  slope_list <- lapply(moderator_seq, function(mod_val) {
+    tibble(
+      moderator_value = mod_val,
+      slope = - (post_draws[[predictor_par]] + mod_val * post_draws[[interaction_par]])
+    )
+  })
+  
+  # Combine the list into a single data frame
+  slope_df <- bind_rows(slope_list)
+  
+  # Summarize the posterior for each moderator value (using a 95% credible interval)
+  slope_summary <- slope_df %>%
+    group_by(moderator_value) %>%
+    summarize(
+      slope_median = median(slope),
+      slope_lower  = quantile(slope, probs = 0.025),
+      slope_upper  = quantile(slope, probs = 0.975)
+    ) %>%
+    # Create significance flag: "sig" if CI excludes 0, "ns" otherwise
+    mutate(sig_flag = if_else(slope_lower > 0 | slope_upper < 0, "sig", "ns")) %>%
+    arrange(moderator_value)
+  
+  # If exponentiate == TRUE, transform slope columns
+  if (exponentiate) {
+    slope_summary <- slope_summary %>%
+      mutate(
+        slope_median_exp = exp(slope_median),
+        slope_lower_exp  = exp(slope_lower),
+        slope_upper_exp  = exp(slope_upper)
+      )
+  }
+  
+  # Identify boundary rows and duplicate them for each category
+  slope_summary <- slope_summary %>%
+    mutate(
+      next_sig_flag = lead(sig_flag),
+      is_boundary   = sig_flag != next_sig_flag & !is.na(next_sig_flag)
+    )
+  
+  boundary_rows <- slope_summary %>%
+    filter(is_boundary)
+  
+  boundary_rows_next <- boundary_rows
+  boundary_rows_next$sig_flag <- boundary_rows_next$next_sig_flag
+  
+  slope_summary_extended <- bind_rows(slope_summary, boundary_rows_next)
+  
+  # Split into "sig" and "ns"
+  slope_summary_sig <- slope_summary_extended %>% filter(sig_flag == "sig")
+  slope_summary_ns  <- slope_summary_extended %>% filter(sig_flag == "ns")
+  
+  # Build the base plot:
+  #    We'll use either slope_{median, lower, upper} or slope_{median_exp, lower_exp, upper_exp} 
+  #    depending on exponentiate.
+  if (exponentiate) {
+    median_col <- "slope_median_exp"
+    lower_col <- "slope_lower_exp"
+    upper_col <- "slope_upper_exp"
+    y_lab <- "Odds Ratio (Exponentiated Slope)"
+    ref_line <- 1  # reference line for ORs is 1
+  } else {
+    median_col <- "slope_median"
+    lower_col <- "slope_lower"
+    upper_col <- "slope_upper"
+    y_lab <- "Slope (Log-Odds Scale)"
+    ref_line <- 0
+  }
+  
+  p <- ggplot() +
+    # Non-significant region
+    geom_ribbon(
+      data = slope_summary_ns,
+      aes_string(
+        x = "moderator_value",
+        ymin = lower_col,
+        ymax = upper_col,
+        fill = '"Non-significant"'
+      ),
+      alpha = 0.2
+    ) +
+    geom_line(
+      data = slope_summary_ns,
+      aes_string(
+        x = "moderator_value",
+        y = median_col,
+        color = '"Non-significant"'
+      ),
+      size = 1
+    ) +
+    # Significant region
+    geom_ribbon(
+      data = slope_summary_sig,
+      aes_string(
+        x = "moderator_value",
+        ymin = lower_col,
+        ymax = upper_col,
+        fill = '"Significant"'
+      ),
+      alpha = 0.2
+    ) +
+    geom_line(
+      data = slope_summary_sig,
+      aes_string(
+        x = "moderator_value",
+        y = median_col,
+        color = '"Significant"'
+      ),
+      size = 1
+    ) +
+    # Reference line (0 for log-odds, 1 for odds-ratios)
+    geom_hline(
+      yintercept = ref_line, 
+      linetype = "dashed"
+    ) +
+    # Manual scales for fill & color
+    scale_fill_manual(
+      values = fill_colors
+    ) +
+    scale_color_manual(
+      values = line_colors
+    ) +
+    labs(
+      x = moderator,
+      y = y_lab,
+      fill = "Significance",
+      color = "Significance"
+    ) +
+    theme_minimal()
+  
+  # Add boundary lines (where significance changes) & labels
+  p2 <- p +
+    geom_vline(
+      data = boundary_rows,
+      aes(xintercept = moderator_value),
+      color = fill_colors["Significant"],
+      alpha = 0.35,
+      size = 0.7,
+      linetype = "dashed"
+    ) +
+    geom_text(
+      data = boundary_rows,
+      aes(x = moderator_value, y = -Inf, label = round(moderator_value, 3)),
+      vjust = vjust_val,
+      size  = 3.7
+    )
+  
+  return(p2)
+}
+
+
+p_log_odds <- plot_slope_by_moderator(
+  mod = pa_sub, 
+  df = df_double, 
+  moderator = "barriers_self_cw", 
+  predictor_par = "b_hu_pushing_self_cw", 
+  interaction_par = "b_hu_barriers_self_cw:pushing_self_cw",
+  exponentiate = FALSE
+)
+
+p_log_odds
+
+p_odds_ratio <- plot_slope_by_moderator(
+  mod = pa_sub, 
+  df = df_double, 
+  moderator = "barriers_self_cw", 
+  predictor_par = "b_hu_pushing_self_cw", 
+  interaction_par = "b_hu_barriers_self_cw:pushing_self_cw",
+  exponentiate = TRUE,
+  vjust_val = -12,
+) + coord_cartesian(ylim = c(1, 18))
+
+p_odds_ratio
+
+
+# Export
+ggsave(
+  filename = file.path("Output", "InteractPlot_log_odds.png"), 
+  plot = p_log_odds,
+  width = 8,
+  height = 5,
+  dpi = 300,
+  bg = 'white'
+)
+
+ggsave(
+  filename = file.path("Output", "InteractPlot_odds_ratio.png"), 
+  plot = p_odds_ratio, 
+  width = 8, 
+  height = 5, 
+  dpi = 300,
+  bg = 'white'
+)
+
+
+```
+
+
+2. Expected MVPA when the hurdle was crossed (interaction NOT significant)
+
+```{r}
+
+p3 <- conditional_effects(
+  pa_sub, 
+  dpar = 'mu',
+  effects = 'pushing_self_cw:barriers_self_cw',
+  #re_formula = NULL, 
+  plot = FALSE
+)
+
+p3[[1]]$estimate__ <- exp(p3[[1]]$estimate__)
+p3[[1]]$lower__ <- exp(p3[[1]]$lower__)
+p3[[1]]$upper__ <- exp(p3[[1]]$upper__)
+
+plot(p3, ask = FALSE)
+```
+
+
+2. Expected physical activity in Minutes (when both components combined)
+
+```{r}
+# Expected physical activity
+p4 <- conditional_effects(
+  pa_sub, 
+  effects = 'pushing_self_cw:barriers_self_cw',
+  #re_formula = NULL,
+  plot = FALSE
+)
+
+plot(p4, ask = FALSE)
+
+```
 
 
 ```{r report_system, results='asis'}
