almost finished all models

--- a/02_As_Preregistered.Rmd
+++ b/02_As_Preregistered.Rmd
@@ -57,8 +57,8 @@ use_mi = FALSE
 shutdown = FALSE
 report_ordinal = FALSE
 do_priorsense = FALSE
-get_bayesfactor = FALSE
-check_models = FALSE #
+get_bayesfactor = TRUE
+check_models = TRUE #
 
 if (get_bayesfactor) {
   stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
