--- a/05_SensitivityBarriersInteraction(ONLY_DAYS_WITH_PLAN).Rmd
+++ b/05_SensitivityBarriersInteraction(ONLY_DAYS_WITH_PLAN).Rmd
@@ -61,8 +61,8 @@ use_mi = FALSE
 shutdown = FALSE
 report_ordinal = FALSE
 do_priorsense = FALSE
-get_bayesfactor = TRUE
-check_models = TRUE 
+get_bayesfactor = FALSE
+check_models = FALSE 
 
 if (get_bayesfactor) {
   stats_to_report <- c('CI', 'SE', 'pd', 'ROPE', 'BF', 'Rhat', 'ESS')
@@ -89,8 +89,8 @@ options(
 
 ####################### Model parameters #######################
 
-iterations = 12000 # 12'000 per chain to achieve 40'000
-warmup = 2000 # 2000
+iterations = 2000 # 12'000 per chain to achieve 40'000
+warmup = 1000 # 2000
 
 # NO AR!!!
 #corstr = 'ar'
@@ -331,13 +331,17 @@ formula <- bf(
     pressure_self_cw * barriers_self_cw + 
     pushing_self_cw * barriers_self_cw + 
     
-    persuasion_self_cw * facilitators_self_cw + 
-    pressure_self_cw * facilitators_self_cw + 
-    pushing_self_cw * facilitators_self_cw + 
+    #persuasion_self_cw * facilitators_self_cw + 
+    #pressure_self_cw * facilitators_self_cw + 
+    #pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw +
+    #persuasion_partner_cw * facilitators_partner_cw +
+    #pressure_partner_cw * facilitators_partner_cw +
+    #pushing_partner_cw * facilitators_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
@@ -346,32 +350,41 @@ formula <- bf(
     #plan_self + plan_partner +
     barriers_self_cb + 
     facilitators_self_cb + 
-    day +  
+    day +
     
     # Random effects
-    (1 + persuasion_self_cw * barriers_self_cw + 
-    pressure_self_cw * barriers_self_cw + 
-    pushing_self_cw * barriers_self_cw + 
+    (1 + persuasion_self_cw * barriers_self_cw 
+    + pressure_self_cw * barriers_self_cw 
+    + pushing_self_cw * barriers_self_cw 
     
-    persuasion_self_cw * facilitators_self_cw + 
-    pressure_self_cw * facilitators_self_cw + 
-    pushing_self_cw * facilitators_self_cw + 
+    #+ persuasion_self_cw * facilitators_self_cw 
+    #+ pressure_self_cw * facilitators_self_cw 
+    #+ pushing_self_cw * facilitators_self_cw 
+
+    + persuasion_partner_cw * barriers_partner_cw
+    + pressure_partner_cw * barriers_partner_cw
+    + pushing_partner_cw * barriers_partner_cw
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw | dd | coupleID),
+    #+ persuasion_partner_cw * facilitators_partner_cw
+    #+ pressure_partner_cw * facilitators_partner_cw
+    #+ pushing_partner_cw * facilitators_partner_cw  
+      | dd | coupleID),
   
   hu = ~ persuasion_self_cw * barriers_self_cw + 
     pressure_self_cw * barriers_self_cw + 
     pushing_self_cw * barriers_self_cw + 
     
-    persuasion_self_cw * facilitators_self_cw + 
-    pressure_self_cw * facilitators_self_cw + 
-    pushing_self_cw * facilitators_self_cw + 
+    #persuasion_self_cw * facilitators_self_cw + 
+    #pressure_self_cw * facilitators_self_cw + 
+    #pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw +
+    #persuasion_partner_cw * facilitators_partner_cw +
+    #pressure_partner_cw * facilitators_partner_cw +
+    #pushing_partner_cw * facilitators_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
@@ -383,17 +396,22 @@ formula <- bf(
     day + 
     
     # Random effects
-    (1 + persuasion_self_cw * barriers_self_cw + 
-    pressure_self_cw * barriers_self_cw + 
-    pushing_self_cw * barriers_self_cw + 
+    (1 + persuasion_self_cw * barriers_self_cw 
+    + pressure_self_cw * barriers_self_cw 
+    + pushing_self_cw * barriers_self_cw 
     
-    persuasion_self_cw * facilitators_self_cw + 
-    pressure_self_cw * facilitators_self_cw + 
-    pushing_self_cw * facilitators_self_cw + 
+    #+ persuasion_self_cw * facilitators_self_cw 
+    #+ pressure_self_cw * facilitators_self_cw 
+    #+ pushing_self_cw * facilitators_self_cw 
+
+    + persuasion_partner_cw * barriers_partner_cw
+    + pressure_partner_cw * barriers_partner_cw
+    + pushing_partner_cw * barriers_partner_cw
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw | dd | coupleID)
+    #+ persuasion_partner_cw * facilitators_partner_cw
+    #+ pressure_partner_cw * facilitators_partner_cw
+    #+ pushing_partner_cw * facilitators_partner_cw   
+      | dd | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
@@ -498,13 +516,15 @@ summary_pa_sub <- summarize_brms(
   model_rows_fixed = model_rows_fixed,
   model_rows_random = model_rows_random,
   model_rownames_fixed = model_rownames_fixed,
-  model_rownames_random = model_rownames_random,
+  #model_rownames_random = model_rownames_random,
   exponentiate = T) 
 
 
 # Print the updated dataframe
 summary_pa_sub %>%
-  print_df(rows_to_pack = rows_to_pack)
+  print_df(
+    rows_to_pack = rows_to_pack
+    )
 
 
 # Plot continuous part of model
@@ -644,10 +664,14 @@ formula <- bf(
     persuasion_self_cw * facilitators_self_cw + 
     pressure_self_cw * facilitators_self_cw + 
     pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw +
+    persuasion_partner_cw * facilitators_partner_cw +
+    pressure_partner_cw * facilitators_partner_cw +
+    pushing_partner_cw * facilitators_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
@@ -666,10 +690,14 @@ formula <- bf(
     persuasion_self_cw * facilitators_self_cw + 
     pressure_self_cw * facilitators_self_cw + 
     pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw | coupleID)
+    persuasion_partner_cw * facilitators_partner_cw +
+    pressure_partner_cw * facilitators_partner_cw +
+    pushing_partner_cw * facilitators_partner_cw | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
@@ -799,10 +827,14 @@ formula <- bf(
     persuasion_self_cw * facilitators_self_cw + 
     pressure_self_cw * facilitators_self_cw + 
     pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw +
+    persuasion_partner_cw * facilitators_partner_cw +
+    pressure_partner_cw * facilitators_partner_cw +
+    pushing_partner_cw * facilitators_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
@@ -811,7 +843,7 @@ formula <- bf(
     #plan_self + plan_partner +
     barriers_self_cb + 
     facilitators_self_cb + 
-    day + 
+    day +
     
     # Random effects
     (1 + persuasion_self_cw * barriers_self_cw + 
@@ -821,10 +853,14 @@ formula <- bf(
     persuasion_self_cw * facilitators_self_cw + 
     pressure_self_cw * facilitators_self_cw + 
     pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw | coupleID)
+    persuasion_partner_cw * facilitators_partner_cw +
+    pressure_partner_cw * facilitators_partner_cw +
+    pushing_partner_cw * facilitators_partner_cw | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
@@ -959,10 +995,14 @@ formula <- bf(
     persuasion_self_cw * facilitators_self_cw + 
     pressure_self_cw * facilitators_self_cw + 
     pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw +
+    persuasion_partner_cw * facilitators_partner_cw +
+    pressure_partner_cw * facilitators_partner_cw +
+    pushing_partner_cw * facilitators_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
@@ -971,7 +1011,7 @@ formula <- bf(
     #plan_self + plan_partner +
     barriers_self_cb + 
     facilitators_self_cb + 
-    day + 
+    day +
     
     # Random effects
     (1 + persuasion_self_cw * barriers_self_cw + 
@@ -981,10 +1021,14 @@ formula <- bf(
     persuasion_self_cw * facilitators_self_cw + 
     pressure_self_cw * facilitators_self_cw + 
     pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw | coupleID)
+    persuasion_partner_cw * facilitators_partner_cw +
+    pressure_partner_cw * facilitators_partner_cw +
+    pushing_partner_cw * facilitators_partner_cw | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
@@ -1120,10 +1164,14 @@ formula <- bf(
     persuasion_self_cw * facilitators_self_cw + 
     pressure_self_cw * facilitators_self_cw + 
     pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw +
+    persuasion_partner_cw * facilitators_partner_cw +
+    pressure_partner_cw * facilitators_partner_cw +
+    pushing_partner_cw * facilitators_partner_cw +
     
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
@@ -1132,7 +1180,7 @@ formula <- bf(
     #plan_self + plan_partner +
     barriers_self_cb + 
     facilitators_self_cb + 
-    day + 
+    day +
     
     # Random effects
     (1 + persuasion_self_cw * barriers_self_cw + 
@@ -1142,10 +1190,14 @@ formula <- bf(
     persuasion_self_cw * facilitators_self_cw + 
     pressure_self_cw * facilitators_self_cw + 
     pushing_self_cw * facilitators_self_cw + 
+
+    persuasion_partner_cw * barriers_partner_cw +
+    pressure_partner_cw * barriers_partner_cw +
+    pushing_partner_cw * barriers_partner_cw +
     
-    persuasion_partner_cw +
-    pressure_partner_cw +
-    pushing_partner_cw | coupleID)
+    persuasion_partner_cw * facilitators_partner_cw +
+    pressure_partner_cw * facilitators_partner_cw +
+    pushing_partner_cw * facilitators_partner_cw | coupleID)
   
   , decomp = 'QR'
   #, autocor = autocor_str
