--- a/01_MainModels.Rmd
+++ b/01_MainModels.Rmd
@@ -188,8 +188,8 @@ model_rownames_fixed <- c(
     "Daily individual's experienced pushing", 
     "Daily partner's experienced pushing", 
     "Day", 
-    "Own Actionplan",
-    'Partner Actionplan',
+    "Own action plan",
+    'Partner action plan',
     "Daily wear time",
     
     # "-- BETWEEN PERSON MAIN EFFECTS",
